syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "./proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service UsersService {
  rpc GetUser(GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {get: "/v1/users/{user_id}"};
  }
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string role = 3;
}

service OrdersService {
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {get: "/v1/orders/{order_id}"};
  }
}

message GetOrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string order_id = 1;
  string item = 2;
  string user_id = 3;
}
